Update hadoop.md